@@ -90,11 +90,15 @@ class TextThought (BaseThought.BaseThought):
 			if not self.ul or not self.lr:
 				print "Warning: Trying to draw unfinished box "+str(self.identity)+".  Aborting."
 				return
-			context.move_to (self.ul[0]-5, self.ul[1]-5)
-			context.line_to (self.ul[0]-5, self.lr[1])
-			context.line_to (self.lr[0], self.lr[1])
-			context.line_to (self.lr[0], self.ul[1]-5)
-			context.line_to (self.ul[0]-5, self.ul[1]-5)
+			context.move_to (self.ul[0]-5, self.ul[1]-5+10)
+			context.line_to (self.ul[0]-5, self.lr[1]-10)
+			context.curve_to (self.ul[0]-5, self.lr[1], self.ul[0]-5, self.lr[1], self.ul[0]+10, self.lr[1])
+			context.line_to (self.lr[0]-10, self.lr[1])
+			context.curve_to (self.lr[0], self.lr[1], self.lr[0], self.lr[1], self.lr[0], self.lr[1]-10)
+			context.line_to (self.lr[0], self.ul[1]-5+10)
+			context.curve_to (self.lr[0], self.ul[1]-5, self.lr[0], self.ul[1]-5, self.lr[0]-10, self.ul[1]-5)
+			context.line_to (self.ul[0]-5+10, self.ul[1]-5)
+			context.curve_to (self.ul[0]-5, self.ul[1]-5, self.ul[0]-5, self.ul[1]-5, self.ul[0]-5, self.ul[1]-5+10)
 			if self.am_root:
 				context.set_source_rgb (0.0,0.9,0.9)
 			elif self.am_primary:
